Pre-processing Luminosity and Precipitations data 28 and 12 weeks data

--- a/notebooks/pre-processing_data/Precipitations/28-weeks_January-12_August-03_2018/01-bgarcial-precipitations.ipynb
+++ b/notebooks/pre-processing_data/Precipitations/28-weeks_January-12_August-03_2018/01-bgarcial-precipitations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
        "4  2018-01-12 02:17:27                3.19"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
        "False"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
        "       [0.]])"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
        "max             44.000000"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +387,7 @@
        "(9750, 1)"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +415,7 @@
        "       [0.]])"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +692,7 @@
        "       [0.]])"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -712,9 +712,9 @@
      "output_type": "stream",
      "text": [
       "Precipitations Training dataset. Minimum value after MaxMinScaler:\n",
-      "Luminosity=0.0\n",
+      "Precipitations=0.0\n",
       "Precipitations Training dataset. Maximum value after MaxMinScaler:\n",
-      "Luminosity=1.0\n"
+      "Precipitations=1.0\n"
      ]
     }
    ],
@@ -737,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -828,7 +828,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.013182</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
@@ -840,7 +840,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.026364</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
@@ -860,7 +860,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21</th>\n",
-       "      <td>0.054924</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22</th>\n",
@@ -928,7 +928,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7777</th>\n",
-       "      <td>0.041193</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7778</th>\n",
@@ -976,7 +976,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7789</th>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.006591</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7790</th>\n",
@@ -1038,15 +1038,15 @@
        "10              0.000000\n",
        "11              0.000000\n",
        "12              0.000000\n",
-       "13              0.000000\n",
+       "13              0.013182\n",
        "14              0.000000\n",
        "15              0.000000\n",
-       "16              0.000000\n",
+       "16              0.026364\n",
        "17              0.000000\n",
        "18              0.000000\n",
        "19              0.000000\n",
        "20              0.000000\n",
-       "21              0.054924\n",
+       "21              0.000000\n",
        "22              0.000000\n",
        "23              0.000000\n",
        "24              0.000000\n",
@@ -1063,7 +1063,7 @@
        "7774            0.000000\n",
        "7775            0.000000\n",
        "7776            0.000000\n",
-       "7777            0.041193\n",
+       "7777            0.000000\n",
        "7778            0.000000\n",
        "7779            0.000000\n",
        "7780            0.000000\n",
@@ -1075,7 +1075,7 @@
        "7786            0.000000\n",
        "7787            0.000000\n",
        "7788            0.000000\n",
-       "7789            0.000000\n",
+       "7789            0.006591\n",
        "7790            0.000000\n",
        "7791            0.000000\n",
        "7792            0.000000\n",
@@ -1090,7 +1090,7 @@
        "[7800 rows x 1 columns]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1108,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1125,14 +1125,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Remember our luminosity testing data \n",
+      "Remember our precipitations testing data \n",
       " [[0.]\n",
       " [0.]\n",
       " [0.]\n",
@@ -1152,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1163,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1186,7 +1186,7 @@
        "       [0.]])"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1198,18 +1198,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'precipitations_minmax_test' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-0e4c19e9f02b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m print('Precipitations Testing dataset. Minimum value after MaxMinScaler:\\nPrecipitations={:.1f}'\n\u001b[0;32m----> 2\u001b[0;31m       .format(precipitations_minmax_test[:,0].min()))\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m print('Precipitations Testing dataset. Maximum value after MaxMinScaler:\\nPrecipitations={:.1f}'\n\u001b[1;32m      5\u001b[0m       .format(precipitations_minmax_test[:,0].max()))\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'precipitations_minmax_test' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precipitations Testing dataset. Minimum value after MaxMinScaler:\n",
+      "Precipitations=0.0\n",
+      "Precipitations Testing dataset. Maximum value after MaxMinScaler:\n",
+      "Precipitations=1.0\n"
      ]
     }
    ],
@@ -1232,7 +1231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1241,7 +1240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1278,23 +1277,23 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.009851</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1302,14 +1301,14 @@
       ],
       "text/plain": [
        "   Precipitación (ml)\n",
-       "0                 0.0\n",
-       "1                 0.0\n",
-       "2                 0.0\n",
-       "3                 0.0\n",
-       "4                 0.0"
+       "0            0.000000\n",
+       "1            0.000000\n",
+       "2            0.000000\n",
+       "3            0.009851\n",
+       "4            0.000000"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1321,13 +1320,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "precipitations_test_df.to_csv('../../../../data/processed/Luminosity/28-weeks_January-12_August-03_2018/' +'\\n' \n",
-    "                                 'Luminosity_Normalized_TESTING_January-12_August-03.csv', sep=',', header=True, index=False)"
+    "precipitations_test_df.to_csv('../../../../data/processed/Precipitations/28-weeks_January-12_August-03_2018/' +'\\n' \n",
+    "                                 'Precipitations_Normalized_TESTING_January-12_August-03.csv', sep=',', header=True, index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
