--- a/notebooks/pre-processing_data/Luminosity/28-weeks_January-12_August-03_2018/01-bgarcial-luminosity.ipynb
+++ b/notebooks/pre-processing_data/Luminosity/28-weeks_January-12_August-03_2018/01-bgarcial-luminosity.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
        "4  2018-01-12 02:17:28          1"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
        "False"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
        "array([1, 1, 1, ..., 1, 1, 1])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
        "       [1]])"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
        "max    55731.000000"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +440,7 @@
        "4          1"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +501,7 @@
        "       [1]])"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -695,13 +695,13 @@
      "output_type": "stream",
      "text": [
       "Remember our luminosity training data \n",
-      " [[27446]\n",
-      " [  338]\n",
-      " [ 2067]\n",
-      " ...\n",
-      " [11419]\n",
+      " [[26536]\n",
       " [    1]\n",
-      " [49804]]\n"
+      " [    1]\n",
+      " ...\n",
+      " [    1]\n",
+      " [    5]\n",
+      " [50937]]\n"
      ]
     }
    ],
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -768,16 +768,16 @@
     {
      "data": {
       "text/plain": [
-       "array([[0.49246366],\n",
-       "       [0.00604701],\n",
-       "       [0.0370716 ],\n",
+       "array([[4.76134936e-01],\n",
+       "       [0.00000000e+00],\n",
+       "       [0.00000000e+00],\n",
        "       ...,\n",
-       "       [0.20488067],\n",
-       "       [0.        ],\n",
-       "       [0.89364795]])"
+       "       [0.00000000e+00],\n",
+       "       [7.17746277e-05],\n",
+       "       [9.13978109e-01]])"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -822,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -868,23 +868,23 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.492464</td>\n",
+       "      <td>0.476135</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.006047</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.037072</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.569962</td>\n",
+       "      <td>0.816777</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.645003</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -892,14 +892,14 @@
       ],
       "text/plain": [
        "   Luz (lux)\n",
-       "0   0.492464\n",
-       "1   0.006047\n",
-       "2   0.037072\n",
-       "3   0.569962\n",
-       "4   0.000000"
+       "0   0.476135\n",
+       "1   0.000000\n",
+       "2   0.000000\n",
+       "3   0.816777\n",
+       "4   0.645003"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -911,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -940,7 +940,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>5576</th>\n",
+       "      <th>4875</th>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -949,10 +949,10 @@
       ],
       "text/plain": [
        "      Luz (lux)\n",
-       "5576        1.0"
+       "4875        1.0"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -970,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -987,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -995,13 +995,13 @@
      "output_type": "stream",
      "text": [
       "Remember our luminosity testing data \n",
-      " [[    1]\n",
-      " [    1]\n",
-      " [11040]\n",
+      " [[   1]\n",
+      " [1127]\n",
+      " [   1]\n",
       " ...\n",
-      " [ 5198]\n",
-      " [  890]\n",
-      " [    1]]\n"
+      " [   1]\n",
+      " [   1]\n",
+      " [1334]]\n"
      ]
     }
    ],
@@ -1014,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1025,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -1040,15 +1040,15 @@
      "data": {
       "text/plain": [
        "array([[0.        ],\n",
+       "       [0.02113403],\n",
        "       [0.        ],\n",
-       "       [0.20719233],\n",
        "       ...,\n",
-       "       [0.09754312],\n",
-       "       [0.01668575],\n",
-       "       [0.        ]])"
+       "       [0.        ],\n",
+       "       [0.        ],\n",
+       "       [0.02501924]])"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1060,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -1093,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -1143,19 +1143,19 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.021134</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.207192</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.903752</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.470805</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1164,13 +1164,13 @@
       "text/plain": [
        "   Luz (lux)\n",
        "0   0.000000\n",
-       "1   0.000000\n",
-       "2   0.207192\n",
-       "3   0.000000\n",
-       "4   0.470805"
+       "1   0.021134\n",
+       "2   0.000000\n",
+       "3   0.903752\n",
+       "4   0.000000"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1182,7 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -1220,7 +1220,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1238,7 +1238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
