Creating records of phreatic level average per day

--- a/notebooks/averaging_data/PhreaticLevel/28-weeks_January-12_August-03_2018/01-bgarcial-phreatic_level_lots-nodes-values_per-day.ipynb
+++ b/notebooks/averaging_data/PhreaticLevel/28-weeks_January-12_August-03_2018/01-bgarcial-phreatic_level_lots-nodes-values_per-day.ipynb
@@ -833,7 +833,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.1 Exporting Nodes values of lots 2 - L2\n",
+    "## 2.1 Exporting Nodes values of all lots and nodes\n",
     "\n",
     "The LOT2 (L2) have N1 and N2"
    ]
@@ -850,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -957,7 +957,7 @@
     "        columns_to_export = ['Fecha.{}'.format(i-1), 'Hora.{}'.format(i-1), 'PORVL{}N{}'.format(i,i-23)]\n",
     "        partial_dataframe_to_csv(\"../../../../data/interim/PhreaticLevel/28-weeks_January-12_August-03_2018/PhreaticLevel_By_Lots-Nodes/PORVL{}N{}_portion.csv\".format(i,i-23), phreatic_level_28w_df, columns_to_export)\n",
     "        # To N2\n",
-    "        columns_to_export = ['Fecha.{}'.format(i-2), 'Hora.{}'.format(i-2), 'PORVL{}N{}'.format(i,i-22)]\n",
+    "        columns_to_export = ['Fecha.{}'.format(i), 'Hora.{}'.format(i), 'PORVL{}N{}'.format(i,i-22)]\n",
     "        partial_dataframe_to_csv(\"../../../../data/interim/PhreaticLevel/28-weeks_January-12_August-03_2018/PhreaticLevel_By_Lots-Nodes/PORVL{}N{}_portion.csv\".format(i,i-22), phreatic_level_28w_df, columns_to_export)\n",
     "        \n",
     "        break\n",
