Generating PHREATIC LEVEL average per day values to PORVLxNy [all lots and hydric nodes]

--- a/notebooks/averaging_data/PhreaticLevel/28-weeks_January-12_August-03_2018/01-bgarcial-phreatic_level_generating_lots-nodes-values_per-day.ipynb
+++ b/notebooks/averaging_data/PhreaticLevel/28-weeks_January-12_August-03_2018/01-bgarcial-phreatic_level_generating_lots-nodes-values_per-day.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
        "[5 rows x 76 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +490,7 @@
        "[5 rows x 76 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -725,7 +725,7 @@
        "[5 rows x 76 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -755,7 +755,7 @@
        "True"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -789,7 +789,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -804,16 +804,125 @@
    "source": [
     "# 2. Exporting phreatic level dataset by lots and nodes.\n",
     "\n",
+    "We have the following phreatic level characterization around of \n",
+    "25 lots on the Porvenir farm \n",
+    "\n",
+    "- Lot 2 **named PORVL2** and have the Node 1 and Node 2\n",
+    "     \n",
+    "     - PORVL2N1\n",
+    "     - PORVL2N2\n",
+    " \n",
+    " ---\n",
+    " \n",
+    "- Lot 4 **named PORVL4** and have the Node 1\n",
+    "     \n",
+    "     - PORVL4N1\n",
+    " \n",
+    " ---\n",
+    "\n",
+    "- Lot 5 **named PORVL5** and have the Node 1\n",
+    "     \n",
+    "     - PORVL5N1\n",
+    " \n",
+    " ---\n",
+    "  \n",
+    "- Lot 6 **named PORVL6** and have the Node 1\n",
+    "     \n",
+    "     - PORVL6N1\n",
+    " \n",
+    " ---   \n",
+    "     \n",
+    "- Lot 7 **named PORVL7** and have the Node 1\n",
+    "     \n",
+    "     - PORVL7N1\n",
+    " \n",
+    " ---\n",
+    "  \n",
+    "- Lot 8 **named PORVL8** and have the Node 1\n",
+    "     \n",
+    "     - PORVL8N1\n",
+    " \n",
+    " ---    \n",
+    "     \n",
+    "- Lot 9 **named PORVL9** and have the Node 1\n",
+    "     \n",
+    "     - PORVL9N1\n",
+    " \n",
+    " ---\n",
+    "    \n",
+    "- Lot 10 **named PORVL8** and have the Node 1\n",
+    "     \n",
+    "     - PORVL10N1\n",
+    " \n",
+    " ---\n",
+    "  \n",
+    "- Lot 13 **named PORVL13** and have the Node 1\n",
+    "     \n",
+    "     - PORVL13N1\n",
+    " \n",
+    " ---\n",
+    "   \n",
+    "- Lot 14 **named PORVL14** and have the Node 1\n",
+    "     \n",
+    "     - PORVL14N1\n",
+    " \n",
+    " ---\n",
+    "    \n",
+    "- Lot 15 **named PORVL15** and have the Node 1\n",
+    "     \n",
+    "     - PORVL15N1\n",
+    " \n",
+    " ---\n",
+    "\n",
+    "- Lot 16 **named PORVL16** and have the Node 1 and Node 2\n",
+    "     \n",
+    "     - PORVL2N1\n",
+    "     - PORVL2N2\n",
+    " \n",
+    " ---\n",
+    " \n",
+    "- Lot 18 **named PORVL18** and have the Node 1, Node 2, Node 3 and Node 4\n",
+    "     \n",
+    "     - PORVL18N1\n",
+    "     - PORVL18N2\n",
+    "     - PORVL18N3\n",
+    "     - PORVL18N4\n",
+    " \n",
+    " ---\n",
+    " \n",
+    "- Lot 21 **named PORVL21** and have the Node 1, Node 2, Node 3, Node 4 and Node 5\n",
+    "     \n",
+    "     - PORVL21N1\n",
+    "     - PORVL21N2\n",
+    "     - PORVL21N3\n",
+    "     - PORVL21N4\n",
+    "     - PORVL21N5\n",
+    " \n",
+    " ---\n",
+    " \n",
+    "- Lot 24 **named PORVL24** and have the Node 1 and Node 2\n",
+    "     \n",
+    "     - PORVL24N1\n",
+    "     - PORVL24N2\n",
+    "\n",
+    " ---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.1 Exporting Nodes values of all lots\n",
+    "\n",
     "We going to export phreatic level data by lots and nodes. This mean, we take the \n",
     "`Fecha.x` and `Hora.x` and the `PORVLxNx` (lot and node to which they belong)\n",
     "\n",
-    "We going to export only these columns.\n",
-    "\n"
+    "We going to export only these columns."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -826,31 +935,28 @@
     "    output = output[columns]\n",
     "    output.to_csv(filename, sep=',', header=True, index=False) \n",
     "\n",
-    "# initial_columns_to_export = ['Fecha', 'Hora', 'PORVL2N1']\n"
+    "# initial_columns_to_export = ['Fecha', 'Hora', 'PORVL2N1']"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.1 Exporting Nodes values of all lots and nodes\n",
+    "By each one of these lots and their respective nodes **`(LxNy)`**\n",
+    "we going to export the `Fecha.x` and `Hora.x` and the `PORVLxNx` \n",
+    "(lot and node to which they belong).\n",
     "\n",
-    "The LOT2 (L2) have N1 and N2"
+    "We going to export only these columns making use of `partial_dataframe_to_csv` \n",
+    "previous function iterating along of the 25 lots of the Porvenir farm getting the \n",
+    "files named **`PORVLxNy_portion.csv`** which contains the many phreatic level values\n",
+    "correspondent to date range from January 12 until August 03th\n",
+    "\n",
+    "By each day there are many phreatic level values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# We begin export the 'Fecha', 'Hora', 'PORVL2N1' columns\n",
-    "# partial_dataframe_to_csv('../../../../data/interim/PhreaticLevel/28-weeks_January-12_August-03_2018/PhreaticLevel_By_Lots-Nodes/PORVL2N1_portion.csv',phreatic_level_28w_df, initial_columns_to_export)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
