--- a/notebooks/pre-processing_data/WeightBananaClusters/01-bgarcial-setting-time-cluster-weight-data.ipynb
+++ b/notebooks/pre-processing_data/WeightBananaClusters/01-bgarcial-setting-time-cluster-weight-data.ipynb
@@ -45,7 +45,7 @@
     "\n",
     "Although harvesting is also done from the last 8, 9, 10 or 11 weeks of the plant's life, we will take the 12-week-old number (** the last of the 28 weeks **) as the ideal time of cut from the bunch\n",
     "\n",
-    "![alt text](https://cldup.com/vvGo194rz4.jpeg \"Tiempo de cosecha del racimo de banano\")\n"
+    "![alt text](https://cldup.com/QownZb5xL--3000x3000.png \"Tiempo de cosecha del racimo de banano\")\n"
    ]
   },
   {
@@ -82,13 +82,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The [**SIOMA**] (https://www.siomapp.com) platform also allows us to have a consolidated data of average, maximum, minimum, total and kg weights per hectare and total kg of each farm. \n",
+    "The [**SIOMA**](https://www.siomapp.com) platform also allows us to have a consolidated data of average, maximum, minimum, total and kg weights per hectare and total kg of each farm. \n",
     "\n",
     "This format is more like a presentation of data to which we must arrive with the outputs that the different models or techniques that we apply give us.\n",
     "\n",
     "Initially we will take a week's rank, which is the frequency of productivity in the region. \n",
     "\n",
-    "<s>We will focus on the data of a single lot of the 25, to go little by little generalizing a solution of the approach of our problem </s> \n",
+    "<s>We will focus on the data of a single lot of the 25, to go little by little generalizing a solution of the approach of our problem</s> \n",
     "\n",
     "We will focus on the data of all lots of the Porvenir farm, are 25 in total \n",
     "\n",
