--- a/notebooks/averaging_data/PhreaticLevel/28-weeks_January-12_August-03_2018/03-bgarcial-phreatic_level_generating_average_between-nodes_values.ipynb
+++ b/notebooks/averaging_data/PhreaticLevel/28-weeks_January-12_August-03_2018/03-bgarcial-phreatic_level_generating_average_between-nodes_values.ipynb
@@ -1327,21 +1327,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Export phreatic_level_l2_28w_avg_pd dataframe \n",
+    "# PORVL2N1 | PORVL2N2 | PORVL2_AVERAGE |\n",
+    "#          |          |                |\n",
     "phreatic_level_l2_28w_avg_pd.to_csv( '../../../../data/interim/PhreaticLevel/'  \\\n",
     "                            '28-weeks_January-12_August-03_2018/PhreaticLevelAverage_by-Lot/' \\\n",
-    "                            'LOTx_N_y_AVG_x-y_table/L2N1_N2_average_per-lot.csv', sep=',', header=True, index=False)"
+    "                            'LOTx_N_y_AVG_x-y_table/PORVL2N1_N2_average_per-lot.csv', sep=',', header=True, index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "phreatic_level_l2_28w_avg_pd_df = phreatic_level_l2_28w_avg_pd[['Fecha','PORVL2_AVERAGE']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Fecha</th>\n",
+       "      <th>PORVL2_AVERAGE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2018-01-12</td>\n",
+       "      <td>0.618913</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2018-01-13</td>\n",
+       "      <td>0.219167</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2018-01-14</td>\n",
+       "      <td>0.172083</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2018-01-15</td>\n",
+       "      <td>0.122917</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2018-01-16</td>\n",
+       "      <td>0.313125</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Fecha  PORVL2_AVERAGE\n",
+       "0  2018-01-12        0.618913\n",
+       "1  2018-01-13        0.219167\n",
+       "2  2018-01-14        0.172083\n",
+       "3  2018-01-15        0.122917\n",
+       "4  2018-01-16        0.313125"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "phreatic_level_l2_28w_avg_pd_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "phreatic_level_l2_28w_avg_pd_df.to_csv( '../../../../data/interim/PhreaticLevel/'  \\\n",
+    "                            '28-weeks_January-12_August-03_2018/PhreaticLevelAverage_by-Lot/' \\\n",
+    "                            'PORVL2_average_per-day.csv', sep=',', header=True, index=False)"
+   ]
   }
  ],
  "metadata": {
